@@ -2,6 +2,7 @@ version 1.4.0+git
 	* Add is_jug_running() function
 	* Fix bug in finding config files
 	* Improved --debug mode: check for unsupported recursive task creation
+	* Add invalidate() to shell environment
 
 version 1.4.0 Tue Jan 3 2017 by luispedro
 	* Fix bug with writing very large objects to disk
